# BranchGPT

./: .env.aws.example  .gitignore  ARCHITECTURE_BEGINNER.md  ARCHITECTURE_FULL_STACK.md  README.md  docker-compose.aws.yml
go_chat_backend/: .env.example  APIKEY_SECURITY_ANALYSIS.md  Dockerfile  USAGE_RAG_MODE.md  docker-compose.minio.yml  docker-compose.yml  go.mod  go.sum  main.go
pdf_processor/: .dockerignore  .env.example  Dockerfile  Makefile  REFACTORING_SUMMARY.md  app.py  config.py  main.py  pyproject.toml  readme.md  start.sh
pdf_processor/app/: __init__.py  doc_streamer.py  redis_worker.py
pdf_processor/docs/: K8S_DEPLOYMENT_GUIDE.md
pdf_processor/etl/: file_downloader.py  pdf_parser copy.py  pdf_parser.py  processing.py
pdf_processor/infra/: __init__.py
pdf_processor/infra/bucket_infra/: __init__.py  file_downloader.py
pdf_processor/infra/document_infra/: embedding.py  pdf_parser.py  processing.py
pdf_processor/infra/grpc_infra/: grpc_client.py  grpc_server.py
pdf_processor/infra/grpc_infra/protos/: cognicore.proto  cognicore_pb2.py  cognicore_pb2_grpc.py
pdf_processor/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml
pdf_processor/protos/: __init__.py  cognicore.proto  cognicore_pb2.py  cognicore_pb2_grpc.py
pdf_processor/service/: grpc_embedding_service.py  grpc_ingest_service.py
pdf_processor/services/: ingest_client.py
pdf_processor/tasks/: api_key.py  grpc_api_key.py  grpc_embedding.py  grpc_server.py  redis_worker.py
pdf_processor/utils/: __init__.py  output.json  pdf_parser.py
(+65 files in other folders)
