[project]
name = "pdf-processor"
version = "0.1.0"
description = "PDF → structured JSON service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.112.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "python-multipart>=0.0.9",
]
